<resources>
    <string name="staples">Staples</string>
    <string name="home_title">Home</string>
    <string name="personal_feed_title">Personal Feed</string>
    <string name="browse_title">Shop by Category</string>
    <string name="store_locator_title">Store Locator</string>
    <string name="weekly_ad_title">Weekly Ad</string>
    <string name="account_title">Account</string>
    <string name="login_title">Log in</string>
    <string name="logout_title">Log out</string>
    <string name="create_account_title">Create Account</string>
    <string name="rewards_title">Staples Rewards</string>
    <string name="link_rewards_title">Link Rewards Account</string>
    <string name="order_title">Orders</string>
    <string name="order_detail_title">Order Details</string>
    <string name="profile_title">Profile</string>
    <string name="about_title">About</string>
    <string name="terms_title">Privacy &amp; Terms</string>
    <string name="credit_card_title">Credit Cards</string>
    <string name="add_card_title">Add Credit Cards</string>
    <string name="address_title">Addresses</string>
    <string name="add_address_title">New Address</string>
    <string name="edit_address_title">Update Address</string>
    <string name="edit_credit_card_title">Update Credit Card</string>
    <string name="cart_title">Cart</string>
    <string name="checkout_title">Checkout</string>
    <string name="guest_checkout_title">Guest Checkout</string>
    <string name="order_confirm_title">Order Confirmation</string>
    <string name="backtotop_title">Back to Menu</string>
    <string name="store_info_title">Store Info</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="empty">Nothing Found</string>
    <string name="best_deal_title">Best Deals</string>
    <string name="sort_refine">Refine</string>
    <string name="sort_best_match">Best Match</string>
    <string name="sort_highest_rated">Rating</string>
    <string name="sort_price_ascending">Price</string>
    <string name="sort_price_descending">Price</string>
    <string name="sort_title_ascending">Name A–Z</string>
    <string name="sort_title_descending">Name Z–A</string>
    <string name="rebate_note">*Price before rebate</string>
    <string name="expired_notice">This promotion has expired.\n\nCheck out some of our other great offers or search for whatever you may need.</string>
    <string name="expired_ok">OK</string>
    <string name="search_results_not_found_header">Your search for \"{0}\" \ndid not match any products</string>
    <string name="search_results_not_found_suggestions">Check spelling\nTry different keywords\nTry more general keywords</string>
    <string name="notify_prefs_title">Notification Preferences</string>
    <string name="alias_text">Alias:</string>
    <string name="set_alias">Set</string>
    <string name="notification_title">Notifications</string>
    <string name="notification_hint">Be in the know. Turn on notifications to receive timely updates on this device.</string>
    <string name="sku_notification_title">Notification</string>
    <string name="notification_header">Staples</string>
    <string name="loading">Loading&#8230;</string>
    <string name="feed_clearance_title">Cart Items On Clearance</string>
    <string name="feed_daily_deal_title">Cart Items On Daily Deal</string>
    <string name="feed_seen_products_title">Your Recently Viewed Items</string>
    <string name="feed_empty_message">Your Personal Feed is Empty</string>
    <string name="feed_empty_interact_message">Explore and come back to find suggestions, deals and more.</string>
    <string name="welcome_format">Welcome\n{0}</string>
    <string name="login_greeting">Hello\nLog in or Sign up?</string>
    <string name="rewards">Rewards</string>
    <string name="store_open">Open</string>
    <string name="store_close">Close</string>
    <string name="no_store">Find a store</string>
    <string name="add_coupon">Add</string>
    <string name="add">Add to cart</string>
    <string name="view">Use in store</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="cartitem_qty_label">Qty</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="add_another">Add Another</string>
    <string name="update_button">Update</string>
    <string name="free_shipping_msg1">Free shipping when you spend %1$s - only %2$s to go!</string>
    <string name="free_shipping_msg2">You qualify for FREE SHIPPING!</string>
    <string name="oversized_shipping_msg">An additional shipping fee of %s has been added to the cart</string>
    <string name="minimum_shipping_msg">You need to add %s or more to your order to ship this item</string>
    <string name="cart_updated_msg">Cart is updated</string>
    <string name="shipping">Shipping</string>
    <string name="expected_delivery">Expected Delivery:</string>
    <string name="pretax_subtotal">Pre-tax subtotal</string>
    <string name="tax">Tax</string>
    <string name="proceed_to_checkout">Secure Checkout</string>
    <string name="pay_with_android">Pay with Android</string>
    <string name="shipping_addr">Shipping Address</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_method_required">Payment Method is required</string>
    <string name="billing_address_required">Billing address is required</string>
    <string name="required_fields">Please fill in required fields</string>
    <string name="billing_addr">Billing Address</string>
    <string name="use_as_billing_addr">Use above as billing address</string>
    <string name="item_subtotal">Product Total (including coupons)</string>
    <string name="coupons_rewards">Coupons &amp; Rewards</string>
    <string name="rewards_coupon_text_label">Present this barcode to an associate\nto redeem your reward in store</string>
    <string name="coupon_code_hint">Add Coupon Code here</string>
    <string name="missing_coupon_code">Please enter a coupon code</string>
    <string name="redeemable_rewards">Redeemable Rewards</string>
    <string name="no_redeemable_rewards">No Redeemable Rewards</string>
    <string name="link_rewards_account">Link Your Rewards Account</string>
    <string name="link_account">Link Account</string>
	<string name="expiration_date_error">Must be in the form MM/YY.</string>
    <string name="premium_product_requires_login">At least one of the items in your cart is a premium product and requires you to be signed in. Please login to complete your purchase.</string>
    <string name="payment_button_text">Done</string>
    <plurals name="business_days">
        <item quantity="one">business day</item>
        <item quantity="other">business days</item>
    </plurals>
    <plurals name="cart_qty">
        <item quantity="one">1 item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string name="empty_cart_msg">Your cart is empty</string>
    <string name="shopping_with_us">Get shopping!</string>
    <string name="price_match_guarantee">Price Match Guarantee</string>
    <string name="price_match_guarantee_conditions">We\'ll match any competitor with\nan online and retail store\n- plus Amazon.</string>
    <string name="free_delivery">Free Next-Day Shipping</string>
    <string name="free_delivery_conditions">Available on thousands of products.</string>
    <string name="easy_returns">Easy Returns</string>
    <string name="easy_returns_conditions">Online. In Store. Always free.</string>
    <string name="rewards_card_number">Rewards Card Number</string>
    <string name="rewards_phone_number">Phone Number</string>
    <string name="rewards_list_tabtitle">REWARDS</string>
    <string name="rewards_ink_tabtitle">INK RECYCLING</string>
    <string name="rewards_summary_tabtitle">SUMMARY</string>
    <string name="rewards_addtocart_confirmation">Reward added to the cart</string>
    <string name="rewards_removefromcart_confirmation">Reward removed from the cart</string>
    <string name="rewards_ytd_savings">Year-to-Date Savings</string>
    <string name="rewards_ytd_spend">Year-to-Date Spend</string>
    <plurals name="rewards_ink_recycled">
        <item quantity="one">Ink cartridge recycled</item>
        <item quantity="other">Ink cartridges recycled</item>
    </plurals>
    <string name="rewards_ink_limit">Limit of %d per month</string>
    <string name="rewards_earned">Earned</string>
    <string name="empty_rewards_linking_msg">Check all the fields and try again</string>
    <string name="invalid_phone_number">Please enter a valid phone number</string>
	<string name="first_name_label">First Name</string>
	<string name="last_name_label">Last Name</string>
	<string name="phone_label">Phone</string>
	<string name="shipto_address_label">Ship-to Address</string>
	<string name="address_label">Address</string>
	<string name="apartment_label">Apt/Suite</string>
	<string name="city_label">City</string>
	<string name="state_label">State</string>
	<string name="zip_code_label">Zip Code</string>
	<string name="input_manually_allcaps">INPUT MANUALLY</string>
    <string name="submit_order">Place Order</string>
    <string name="order_confirmation_msg">Thank you for your order!</string>
    <string name="order_confirmation_msg2">An email with complete details has been sent to %s.</string>
    <string name="order_number_label">Order Number</string>
    <string name="delivery_range_label">Delivery Range for Shipped Items</string>
    <string name="order_total_label">Total</string>
    <string name="create_acccount_msg1">What to check out faster next time?</string>
    <string name="create_acccount_msg2">Create a Staples account! We just need a password.</string>
    <string name="create_acccount_pw_rules">Case sensitive, 6&#8211;12 characters long, cannot contain spaces.</string>
    <string name="create_account">Create account</string>
    <string name="account_confirmation_msg">Thanks for creating an account!</string>
    <string name="order_confirmation_with_error">An error occurred, but your order appears to have gone through."</string>
    <string name="password_reset">Reset Password</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="sku_set_message">Select product option</string>
    <string name="sku_title">Select an Option</string>
    <string name="skuset_change">Change product option</string>
    <string name="username">Username/Email</string>
    <string name="password">Password</string>
    <string name="password_forgot">Forgot your password?</string>
    <string name="email">Email</string>
    <string name="reenter_email">Re-enter Email</string>
    <string name="email_mismatch">Email address must match</string>
    <string name="required">Required</string>
    <string name="bad_email">Not a valid email</string>
    <string name="bad_us_state">Please enter a valid US state</string>
    <string name="cid">CID</string>
    <string name="username_password_required">Username and Password are required</string>
    <string name="address_deleted">Address deleted</string>
    <string name="address_updated">Address updated</string>
    <string name="cc_added">Credit card added</string>
    <string name="cc_updated">Credit card updated</string>
    <string name="cc_deleted">Credit card deleted</string>
    <string name="check_exp_date">Check expiration date</string>
    <string name="cc_number_unrecognized">Credit card number not recognized</string>
    <string name="cc_encryption_failure">Credit card encryption failed</string>
    <string name="external_title">External Link</string>
    <string name="external_prompt">This selection will take you to an\nexternal link in your device\'s browser.\n\nDo you want to go there?</string>
    <string name="external_no">No</string>
    <string name="external_yes">Yes</string>
    <string name="show">SHOW</string>
    <string name="cancel">CANCEL</string>
</resources>