<?xml version="1.0" encoding="utf-8"?>
<com.staples.mobile.cfa.widget.AddressBlock xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="wrap_content"
    android:orientation="vertical"
	android:layout_marginLeft="@dimen/left_margin"
	android:layout_marginRight="@dimen/right_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.staples.mobile.cfa.widget.DualHintEdit
            android:id="@+id/firstName"
            style="@style/InputField"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:hint="@string/first_name_label"/>
        <com.staples.mobile.cfa.widget.DualHintEdit
            android:id="@+id/lastName"
            style="@style/InputField"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:hint="@string/last_name_label"/>
    </LinearLayout>
    <com.staples.mobile.cfa.widget.DualHintEdit
        android:id="@+id/phoneNumber"
        style="@style/InputField"
        android:inputType="phone"
        android:hint="@string/phone_label"/>
    <com.staples.mobile.cfa.widget.DualHintEdit
        android:id="@+id/emailAddr"
        style="@style/InputField"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>
    <AutoCompleteTextView
        android:id="@+id/addressACTV"
        style="@style/InputField"
        android:paddingTop="16sp"
        android:inputType="textPostalAddress"
        android:hint="@string/address_label"/>
    <com.staples.mobile.cfa.widget.DualHintEdit
        android:id="@+id/addressET"
        style="@style/InputField"
        android:inputType="textPostalAddress"
        android:hint="@string/address_label"/>
    <com.staples.mobile.cfa.widget.DualHintEdit
		android:id="@+id/apartment"
        style="@style/InputField"
        android:inputType="textPostalAddress"
		android:hint="@string/apartment_label"/>
    <com.staples.mobile.cfa.widget.DualHintEdit
        android:id="@+id/city"
        style="@style/InputField"
        android:inputType="textPostalAddress"
		android:hint="@string/city_label"/>
    <com.staples.mobile.cfa.widget.DualHintEdit
        android:id="@+id/state"
        style="@style/InputField"
        android:inputType="textPostalAddress"
        android:hint="@string/state_label"/>
    <com.staples.mobile.cfa.widget.DualHintEdit
        android:id="@+id/zipCode"
        style="@style/InputField"
        android:inputType="number"
        android:hint="@string/zip_code_label"/>
</com.staples.mobile.cfa.widget.AddressBlock>
