<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sort_options"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/round_button_radius"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom|center"
            android:paddingTop="@dimen/action_bar_quarter_margin"
            android:paddingBottom="@dimen/action_bar_quarter_margin"
            android:background="@color/staples_opaque_black">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/SortOptionStyle"
                    android:paddingLeft="@dimen/action_bar_quarter_margin"
                    android:text="@string/sort_refine"/>
                <RadioButton
                    android:id="@+id/sort_best_match"
                    style="@style/SortOptionStyle"
                    android:text="@string/sort_best_match"/>
                <RadioButton
                    android:id="@+id/sort_price_ascending"
                    style="@style/SortOptionStyle"
                    android:text="@string/sort_price_ascending"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/sort_title_ascending"
                    style="@style/SortOptionStyle"
                    android:text="@string/sort_title_ascending"/>
                <RadioButton
                    android:id="@+id/sort_price_descending"
                    style="@style/SortOptionStyle"
                    android:text="@string/sort_price_descending"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/sort_title_descending"
                    style="@style/SortOptionStyle"
                    android:text="@string/sort_title_descending"/>
                <RadioButton
                    android:id="@+id/sort_highest_rated"
                    style="@style/SortOptionStyle"
                    android:text="@string/sort_highest_rated"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ImageButton
        android:id="@+id/close_sort"
        android:layout_width="@dimen/round_button_diameter"
        android:layout_height="@dimen/round_button_diameter"
        android:layout_gravity="top|right"
        android:layout_marginRight="@dimen/round_button_radius"
        android:background="@drawable/oval_white"
        android:src="@drawable/ic_close_black"/>
</FrameLayout>
