<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_signin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10dip"
    android:paddingLeft="10dip"
    android:paddingTop="10dip"
    android:paddingBottom="10dip">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:layout_below="@+id/username" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/forgotPwdTV"
        android:layout_below="@+id/password"
        android:textSize="@dimen/fontsize_12sp"
        android:paddingTop="10dp"
        android:textColor="@color/staples_dark_gray"
        android:text="@string/password_forgot"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@color/staples_white"
        android:id="@+id/submit_button"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
