<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014 Staples, Inc. All rights reserved.
  -->

<!--link rewards account -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp"
    >
    <!--android:visibility="gone"-->
    <!--android:background="@color/background_extra_light_gray"-->

    <TextView
        android:id="@+id/link_rewards_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:text="@string/link_rewards_account"
        />
    <EditText
        android:id="@+id/rewards_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/link_rewards_heading"
        android:hint="@string/rewards_card_number"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:maxLength="10"/>
    <EditText
        android:id="@+id/rewards_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rewards_card_number"
        android:hint="@string/rewards_phone_number"
        android:inputType="phone"
        android:imeOptions="actionDone"
        android:maxLength="15"/>
    <Button
        android:id="@+id/rewards_link_acct_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/rewards_phone_number"
        android:layout_alignParentRight="true"
        android:text="@string/link_account"
        android:textSize="16sp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        />
</RelativeLayout>

