<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2015 Staples, Inc. All rights reserved.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.staples.mobile.cfa.widget.RelativeLayoutWithProgressOverlay
        android:id="@+id/dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/staples_white"
        >

        <!--email address-->
        <TextView
            android:id="@+id/emailAddr_label"
            style="@style/GraySubheading"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="4dp"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/emailAddr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/emailAddr_label"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:hint="@string/email"
            android:textSize="@dimen/fontsize_16sp"
            android:textColor="@color/staples_black"
            />

        <!--password-->
        <TextView
            android:id="@+id/password_label"
            style="@style/GraySubheading"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/emailAddr"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:maxLength="12"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/password_label"
            android:textSize="@dimen/fontsize_16sp"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:hint="@string/password"
            android:textColor="@color/staples_black"
            />
        <!-- password "SHOW" button-->
        <TextView
            android:id="@+id/show_password"
            style="@style/GraySubheading"
            android:layout_toRightOf="@id/password"
            android:layout_below="@id/password_label"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/staples_blue"
            android:text="@string/show"/>

        <!--password rules text-->
        <TextView
            android:id="@+id/password_rules"
            android:layout_gravity="left"
            style="@style/GraySubheading"
            android:layout_marginLeft="4dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/password"
            android:layout_marginBottom="32dp"
            android:text="@string/create_acccount_pw_rules"/>


        <!--create account button-->
        <android.support.v7.widget.CardView
            android:id="@+id/create_account_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_below="@id/password_rules"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:padding="0dp"
            card_view:cardCornerRadius="1dp"
            card_view:cardElevation="0dp"
            card_view:cardBackgroundColor="@color/staples_red" >

            <TextView
                android:id="@+id/create_account_button"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/create_account"
                android:textSize="@dimen/fontsize_14sp"
                android:textColor="@color/staples_white"
                />
        </android.support.v7.widget.CardView>

        <!--cancel button-->
        <TextView
            android:id="@+id/cancel"
            android:layout_below="@id/password_rules"
            android:layout_toLeftOf="@id/create_account_button_layout"
            android:layout_height="36dp"
            android:layout_width="wrap_content"
            android:layout_marginRight="32dp"
            android:gravity="center"
            android:textSize="@dimen/fontsize_14sp"
            android:textColor="@color/staples_red"
            android:text="@string/cancel"/>

    </com.staples.mobile.cfa.widget.RelativeLayoutWithProgressOverlay>

    <RelativeLayout
        android:id="@+id/dialog_progress_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#6f000022" >
        <ProgressBar
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateOnly="true" />
    </RelativeLayout>

</FrameLayout>
